# file_storage

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  README_DOCKER.md  alembic.ini  database.env  docker-compose.yml  entrypoint.sh  pyproject.toml  server.py  settings.py  setup.cfg
.github/workflows/: linter.yml
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
file_storage/: __init__.py  __main__.py  conftest.py  settings.py
file_storage/db/: __init__.py  dependencies.py  meta.py  utils.py
file_storage/db/crud/: __init__.py  base.py  user.py
file_storage/db/migrations/: env.py
file_storage/db/migrations/versions/: 2022-08-23-18-43_36bc2f711a56.py
file_storage/db/models/: __init__.py  base.py  user.py
file_storage/services/: __init__.py
file_storage/static/: styles.css
file_storage/templates/: index.html
file_storage/tests/: __init__.py  test_user.py
file_storage/web/: __init__.py  application.py  lifetime.py
file_storage/web/api/: __init__.py  cryptography.py  router.py
file_storage/web/api/docs/: __init__.py  views.py
file_storage/web/api/echo/: __init__.py  schema.py  views.py
file_storage/web/api/monitoring/: __init__.py  views.py
file_storage/web/api/server/: __init__.py  views.py
file_storage/web/api/user/: __init__.py  schema.py  utils.py  views.py
file_storage/web/server/: views.py
templates/: index.html
